Fix description on mobile

--- a/src/components/react/components/EstimateTool/EstimateTool.css
+++ b/src/components/react/components/EstimateTool/EstimateTool.css
@@ -68,6 +68,10 @@
     /* Mobile */
     @media screen and (width <= 740px) {
       width: 260px;
+
+      .description {
+        font-size: 75% !important;
+      }
     }
   }
 
